--- a/index.htm
+++ b/index.htm
@@ -21,10 +21,10 @@
 <script type='text/javascript' language='JavaScript1.1'>
 <!--
 	// Copyright (c) 2000-2008 eInstruction Corp.
-	var listMap = '1111111111111111111';
-	var qtypeMap = '2222222222222222222';
-	var ansMap = new Array(19);
-	var ptsMap = new Array(19);
+	var listMap = '11111111111111111111';
+	var qtypeMap = '22222222222222222222';
+	var ansMap = new Array(20);
+	var ptsMap = new Array(20);
 	ansMap[0] = '43';
 	ptsMap[0] = 1;
 	ansMap[1] = '43';
@@ -63,6 +63,8 @@
 	ptsMap[17] = 1;
 	ansMap[18] = '52';
 	ptsMap[18] = 1;
+	ansMap[19] = '55';
+	ptsMap[19] = 1;
 	function HandleSubmit(f)
 	{
 		var	MAGIC = 840;
@@ -847,6 +849,33 @@ valign='baseline'><td><div class='choice'>b.</div></td><td><span class='default'
 by extraction is achieved at relatively low temperatures</span></td><td><div
 class='choice'>d.</div></td><td><span class='default'>Because solvent used for extraction is
 paltially miscible with the feed</span></td></tr></table></div>
+<div class='spacer'>&nbsp;</div>
+	</td>
+</tr>
+<tr valign='baseline'>
+	<td>
+		<select name='MC:20' align='top' onmousewheel='return(false);'>
+			<option value=' '> 
+			<option value='A'>A
+			<option value='B'>B
+			<option value='C'>C
+			<option value='D'>D
+		</select>
+	</td>
+	<td>
+		<p class='qnumber'>&nbsp;20.&nbsp;</p>
+	</td>
+	<td width='100%'>
+<div class='default'><span class='font4'>For a fixed purity/yield, counter-current absorption
+processes require __________ solvent than cross-flow processes.</span></div>
+<div class='default'><table cellpadding='0' cellspacing='0' width='95%' border='0'><tr
+valign='baseline'><td width='4%'><div class='choice'>a.</div></td><td width='46%'><span
+class='default'><span class='font4'>less</span></span></td><td width='4%'><div
+class='choice'>c.</div></td><td width='46%'><span class='default'><span class='font4'>dependent on
+the condition</span></span></td></tr><tr valign='baseline'><td><div
+class='choice'>b.</div></td><td><span class='default'><span
+class='font4'>more</span></span></td><td><div class='choice'>d.</div></td><td><span
+class='default'><span class='font4'>cannot be determined</span></span></td></tr></table></div>
 <div class='spacer'>&nbsp;</div>
 	</td>
 </tr>
